Add swagger docs for users endpoints
